--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend for front end developer",
   "main": "server.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm start"
   },
   "keywords": [
     "backend",
